tests/NormalTests/paczka1/fuzzy1/17033181.err
Error in line 7: tLcKw S581 80,48
Error in line 10: CH2pkL A892 56,7
Error in line 3: tLcKw S581 21,2
Error in line 29: oZH S581 88,5
Error in line 26: v0A A892 22,6
